# litesvm

./: Cargo.toml
crates/litesvm/: Cargo.toml
crates/litesvm/src/: accounts_db.rs  lib.rs  message_processor.rs
crates/litesvm/src/storage/: mod.rs
crates/litesvm/tests/: counter_test.rs
crates/loader/tests/: loader.rs
