[workspace]
resolver = "2"
members = ["crates/litesvm", "crates/loader"]
exclude = ["crates/node-litesvm/tests/clock-example"]

[workspace.package]
version = "0.6.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/LiteSVM/litesvm"
rust-version = "1.75.0"

[workspace.dependencies]
agave-reserved-account-keys = "2.3.3"
ansi_term = "0.12"
bincode = "1.3"
criterion = "0.5"
ed25519-dalek = "1.0.1"
indexmap = "2.6"
itertools = "0.14"
libsecp256k1 = "0.6.0"
litesvm = { path = "crates/litesvm", version = "0.6" } # This is a local path dependency, manage its update yourself
log = "0.4"
napi = { version = "2.12.2", default-features = false }
qualifier_attr = "0.2.2"
serde = "1.0"
smallvec = "1.13"
solana-account = "=2.2.1"
solana-address-lookup-table-interface = "2.2.2"
solana-bpf-loader-program = "2.3.3"
solana-builtins = "2.3.3"
solana-clock = "2.2.2"
solana-compute-budget = "2.3.3"
solana-compute-budget-instruction = "2.3.3"
solana-compute-budget-interface = "2.2.2"

solana-ed25519-program = "2.2.3"
solana-epoch-rewards = "2.2.1"
solana-epoch-schedule = "2.2.1"
agave-feature-set = "2.3.3"
solana-svm-feature-set = "2.3.3"
solana-fee = "2.3.3"
solana-fee-structure = "2.3.0"
solana-hash = "2.3.0"
solana-instruction = "2.3.0"
solana-instructions-sysvar = "2.2.2"
solana-keypair = "2.2.3"
solana-last-restart-slot = "2.2.1"
solana-loader-v3-interface = "5.0" # This crate has its own versioning, 3.0 is still current
solana-loader-v4-interface = "2.2.1"
solana-loader-v4-program = "2.3.3"
solana-log-collector = "2.3.3"
solana-measure = "2.3.3"
solana-message = "2.3.3"
solana-native-token = "2.3.0"
solana-nonce = "2.2.1"
solana-nonce-account = "2.2.1"
agave-precompiles = "2.3.3"
solana-program = "2.3.3"
solana-program-error = "2.2.2"
solana-program-option = "2.2.1"
solana-program-pack = "2.2.1"
solana-program-runtime = "2.3.3"
solana-program-test = "2.3.3"
solana-pubkey = "2.3.3"
solana-rent = "2.2.1"
solana-runtime-transaction = "2.3.3"
solana-sdk-ids = "2.2.1"
solana-secp256k1-program = "2.2.3"
solana-sha256-hasher = "2.2.1"
solana-signature = "2.3.0"
solana-signer = "2.2.1"
solana-slot-hashes = "2.2.1"
solana-slot-history = "2.2.1"
solana-stake-interface = "1.2.1"
solana-svm = "2.3.3"
solana-svm-callback = "2.3.3"
solana-svm-transaction = "2.3.3"
solana-system-interface = "1.0"
solana-system-program = "2.3.3"
solana-sysvar = "2.2.2"
solana-sysvar-id = "2.2.1"
solana-timings = "2.3.3"
solana-transaction = "2.2.3"
solana-transaction-context = "2.3.3"
solana-transaction-error = "2.2.1"
solana-vote-program = "2.3.3"
spl-associated-token-account-client = "2.0"
spl-token = "7.0.0"
spl-token-2022 = "7.0.0"
test-log = "0.2"
thiserror = "2.0"
tokio = "1.35"
rocksdb = { version = "0.21", features = ["zstd"] }
num_cpus = "1.16.0"

[profile.bench]
debug = true

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.lints.clippy]
result_large_err = "allow"
